# bnetlauncher

./: .gitignore  README.md  install.sh  pyproject.toml
bnetlauncher/: __init__.py  __main__.py  app.py  auth.py  config.py  game_manager.py  gtk_compat.py  install_health.py  main.py  window.py  wine_runner.py  wow_addons.py
bnetlauncher/ui/: __init__.py  game_card.py  hub_pages.py  settings.py  sidebar.py  style.css
scripts/: check_imports.py
tests/: __init__.py  test_wine_runner.py  test_wow_addons.py
